# ai-modal

./: .gitignore  .release-it.json  CHANGELOG.md  README.md  index.html  package.json  patch_skills.js  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
.serena/: project.yml
.trae/documents/: 代码重构与优化计划.md
src/: App.test.tsx  App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: env_config.rs  mcp.rs  mod.rs  model.rs  model_config.rs  model_mapping.rs  provider.rs  skill_enrichment.rs  skill_enrichment_job.rs  skills.rs
src-tauri/src/commands/cli_proxy/: commands.rs  config.rs  gateway.rs  types.rs
src-tauri/src/commands/codex_proxy/: commands.rs  config.rs  gateway.rs  mod.rs  types.rs
src-tauri/src/commands/curl_task/: commands.rs  config.rs  mod.rs  types.rs
src-tauri/src/commands/model_mapping/: claude.rs  commands.rs  config.rs  gateway.rs  mod.rs  types.rs
src-tauri/src/commands/model_mapping/protocol/: converter.rs  mod.rs  parser.rs
src-tauri/src/providers/: openai.rs  router.rs
src/api/: codexProxy.ts
src/components/: ConfigPage.tsx  ConfirmModal.tsx  CopyButton.tsx  DetectPage.tsx  DevLog.tsx  HintTooltip.tsx  McpPage.tsx  ModelConfigSection.tsx  ModelMappingPage.tsx  ModelsPage.tsx  PromptDetailPage.tsx  PromptsPage.tsx  ProtocolTestUI.tsx  ProviderDetailPage.tsx  RulesPage.tsx  SettingsPage.tsx  Sidebar.tsx  SkillsPage.tsx  (+2 more)
(+144 files in other folders)
