[package]
name = "ai-modal"
version = "0.5.0"
edition = "2021"

[lib]
name = "ai_modal_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri             = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs   = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
percent-encoding = "2"
tokio      = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc  = "0.2"

[profile.release]
codegen-units = 1
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = true
